[build-system]
requires = ['setuptools>=64', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[project]
name = 'stormware'
description = 'API connectors for data analysis and task automation'
readme = 'README.rst'
requires-python = '~= 3.12'
license = 'MIT'
authors = [{name = 'Logikal GmbH', email = 'contact@logikal.io'}]
keywords = ['api', 'connector']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.12',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Typing :: Typed',
]
dynamic = ['version', 'dependencies', 'optional-dependencies']

[project.urls]
'Documentation' = 'https://docs.logikal.io/stormware/'
'Release notes' = 'https://github.com/logikal-io/stormware/releases'
'Issue tracker' = 'https://github.com/logikal-io/stormware/issues'
'Source code' = 'https://github.com/logikal-io/stormware'

[tool.setuptools.dynamic]
dependencies = {file = 'requirements/core.txt'}

[tool.setuptools.dynamic.optional-dependencies]
google = {file = 'requirements/extras/google.txt'}
amazon = {file = 'requirements/extras/amazon.txt'}
facebook = {file = 'requirements/extras/facebook.txt'}

[tool.setuptools]
packages = ['stormware', 'stormware.amazon', 'stormware.google']

[tool.setuptools_scm]

[tool.stormware]
organization = 'logikal.io'

[tool.stormware.google]
service_account = 'testing@stormware-logikal-io.iam.gserviceaccount.com'

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  'facebook_business.*',
  'googleapiclient.*',
  'google_auth_oauthlib',
]

[tool.pytest]
addopts = ['-m', 'not integration']
markers = ['integration']
norecursedirs = ['build', 'docs/jupyter_execute']
filterwarnings = [
  'error',
  # See https://github.com/googleapis/google-auth-library-python-oauthlib/issues/442
  'ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning',
]
