[build-system]
requires = ['setuptools>=80', 'setuptools-scm[simple]>=10']
build-backend = 'setuptools.build_meta'

[project]
name = 'stormware'
description = 'API connectors for data analysis and task automation'
readme = 'README.rst'
requires-python = '~= 3.11'
license = 'MIT'
authors = [{name = 'Logikal GmbH', email = 'contact@logikal.io'}]
keywords = ['api', 'connector']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Typing :: Typed',
]
dynamic = ['version', 'dependencies', 'optional-dependencies']

[project.urls]
'Documentation' = 'https://docs.logikal.io/stormware/'
'Release notes' = 'https://github.com/logikal-io/stormware/releases'
'Issue tracker' = 'https://github.com/logikal-io/stormware/issues'
'Source code' = 'https://github.com/logikal-io/stormware'

[tool.setuptools.dynamic]
dependencies = {file = 'requirements/core.txt'}

[tool.setuptools.dynamic.optional-dependencies]
google = {file = 'requirements/extras/google.txt'}
amazon = {file = 'requirements/extras/amazon.txt'}
facebook = {file = 'requirements/extras/facebook.txt'}
microsoft = {file = 'requirements/extras/microsoft.txt'}

[tool.setuptools]
packages = ['stormware', 'stormware.amazon', 'stormware.google', 'stormware.microsoft']

[tool.stormware]
organization = 'logikal.io'

[tool.stormware.google]
service_account_email = 'testing@stormware-logikal-io.iam.gserviceaccount.com'

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  'facebook_business.*',
  'google.ads.googleads.client',
  'google.protobuf.*',
  'googleapiclient.*',
  'google_auth_oauthlib',
  'bingads.*',
]

[tool.pytest]
addopts = ['-m', 'not integration']
markers = ['integration']
norecursedirs = ['build', 'docs/jupyter_execute']
filterwarnings = [
  'error',
  # Note: not sure where are these coming from, can't reproduce locally
  'ignore:unclosed.*[Ss]ocket.*:ResourceWarning',
  'ignore:.*get_validators.*is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20',
  # See https://github.com/BingAds/BingAds-Python-SDK/issues/340
  'ignore:datetime.datetime.utcnow\(\) is deprecated.*:DeprecationWarning',
]

[tool.coverage.report]
omit = [
  'stormware/google/ads.py',  # not tested yet
  'tests/stormware/integration/google/test_ads.py',  # not tested yet
]
